fix h3 issue and spacing

--- a/_styles/-theme.scss
+++ b/_styles/-theme.scss
@@ -25,9 +25,9 @@
 
 :root {
   // font families
-  --title: "Nunito", sans-serif;
-  --heading: "Nunito", sans-serif;
-  --body: "Nunito", sans-serif;
+  --title: "Lato", sans-serif;
+  --heading: "Lato", sans-serif;
+  --body: "Lato", sans-serif;
   --code: "Roboto Mono", monospace;
 
   // font sizes
@@ -43,7 +43,7 @@
   --bold: 600;
 
   // text line spacing
-  --spacing: 1.4;
+  --spacing: 1.6;
 
   // effects
   --rounded: 3px;
